Fixed hero image width overflow

--- a/frontend/src/sass/App.scss
+++ b/frontend/src/sass/App.scss
@@ -40,7 +40,6 @@ nav {
 .hero-banner {
   position: relative;
   height: 500px;
-  width: 100vw;
   z-index: -2;
   overflow-y: hidden;
   
